# ygopen

./: .gitignore  CMakeLists.txt  README.md  TODO.md  banlist.cpp  banlist.hpp  banlist.proto  board.hpp  buffer.hpp  build.sh  card.hpp  card_database.cpp  card_database.hpp  core_auxiliary.cpp  core_data.proto  core_gmsg_information.proto  core_gmsg_request.proto  core_gmsg_specific.proto  core_interface.cpp  core_interface.hpp  core_message.hpp  core_messages.hpp  core_msg.proto  core_msg_information.proto  core_msg_request.proto  database_manager.cpp  database_manager.hpp  deck.cpp  deck.hpp  deck.proto  duel.cpp  duel.hpp  duel_observer.hpp  encoder_impl_begin.hpp  encoder_impl_end.hpp  encoder_information_impl.hpp  encoder_request_impl.hpp  encoder_spec_information_impl.hpp  igmsg_encoder.cpp  io_gmsg_stream.hpp  (+6 more)
backup/: duel_observer_dispatcher.hpp  openyugi-premake4.lua  player.hpp  player_local.cpp  player_local.hpp
board/: board.hpp  card.hpp
codec/: CMakeLists.txt  README.md  buffer.hpp  core_data.proto  core_msg_request.proto  encoder_impl_end.hpp  encoder_information_impl.hpp  encoder_request_impl.hpp  encoder_spec_information_impl.hpp  msg_codec.hpp  msg_encoder.cpp  msgs_map.hpp
core/: premake4.lua
encoder/: buffer.hpp  io_gmsg_stream.hpp
enums/: attribute.hpp  core_messages.hpp  duel_mode.hpp  location.hpp  misc.hpp  position.hpp  query.hpp  race.hpp  reason.hpp  reason_type.hpp  status.hpp  summon_type.hpp  type.hpp
old/: core_msg.proto
sdlpro/: card_texture_manager.cpp  card_texture_manager.hpp  core_auxiliary.cpp  core_auxiliary.hpp  core_interface.cpp  core_interface.hpp  core_messages.hpp  database_manager.hpp  duel.hpp  duel_observer.hpp  game_frame_sdl.cpp  game_frame_sdl.hpp  main.cpp  premake4.lua
src/: CMakeLists.txt  banlist.cpp  database_manager.hpp  pod_card.hpp
src/client/: CMakeLists.txt  board.hpp  card_texture_manager.cpp  card_texture_manager.hpp  common_data.hpp  configs.cpp  configs.hpp  game_data.cpp  game_data.hpp  game_instance.cpp  game_instance.hpp  game_state.hpp  graphic_board.cpp  graphic_board.hpp  main.cpp  state.hpp  static_configs.hpp.in
src/client/drawing/: api.cpp  api.hpp  gl_common_include.h  gl_context.cpp  gl_context.hpp  gl_core_funcs.h  gl_es2_funcs.h  gl_include.cpp  gl_include.hpp  gl_include_defines.h  gl_mesh.cpp  gl_mesh.hpp  gl_shader_and_program.cpp  gl_shader_and_program.hpp  primitive.hpp  texture.hpp  types.hpp
src/client/drawing/dummy/: primitive.cpp  primitive.hpp  texture.cpp  texture.hpp
src/client/drawing/gl_core/: primitive.cpp  primitive.hpp
src/client/drawing/gl_es/: common.hpp  primitive.cpp  primitive.hpp  shader_and_program.cpp  shader_and_program.hpp
src/client/drawing/gl_shared/: common.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  shader_and_program.cpp  shader_and_program.hpp  texture.cpp  texture.hpp
src/client/states/: loading.cpp  loading.hpp  menu.cpp  menu.hpp
src/common/: database_manager.cpp  database_manager.hpp
src/common/enums/: reason.hpp
src/core/: core_auxiliary.hpp  core_interface.cpp  core_interface.hpp  duel.cpp  duel.hpp
src/enums/: core_message.hpp  query.hpp  race.hpp
util/: buffer_manipulator.hpp
